Fixed text overflow in user show

--- a/app/assets/stylesheets/2-userShow.scss
+++ b/app/assets/stylesheets/2-userShow.scss
@@ -39,15 +39,17 @@
 
 .user-show-username{
   text-align: center;
-  width: 150px;
+  width: 175px;
   float: left;
   margin-left: 25px;
   font-weight: bold;
   font-size: 24px;
+  overflow: hidden;
 }
 
 .user-show-follow-button{
-  float: left;
+  float: right;
+  margin-right: 30px;
 }
 
 .unfollow-button{
